all-together/fix-LoadBalancer.yml
# SERVICE: ingress-controller (controller creado con https://raw.githubusercontent.com/kubernetes/ingress-nginx/master/deploy/mandatory.yaml)
kind: Service
apiVersion: v1
metadata:
  name: ingress-nginx
  namespace: ingress-nginx
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
spec:
  externalTrafficPolicy: Local
  type: NodePort
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
  ports:
    - name: http
      port: 80
      targetPort: http
#    - name: https
#      port: 443
#      targetPort: https
