all-together/kubernetes-all.yml
# DEPLOYMENT:  eureka-server
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: eureka-server-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: eureka-server
    spec:
      containers:
      - name: eureka-server
        image: noelalonso1/eureka-server
        ports:
        - name: eureka-port
          containerPort: 8761

---
# DEPLOYMENT: Rabbit MQ
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: rabbit-mq-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: rabbit-mq
    spec:
      hostname: rabbitmq
      containers:
      - name: rabbit-mq
        image: rabbitmq:3.7.8-management-alpine
        ports:
        - containerPort: 5672
        - containerPort: 15672

---
# DEPLOYMENT: eureka-client
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: eureka-client-deployment
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: eureka-client
    spec:
      containers:
      - name: eureka-client
        image: noelalonso1/eureka-client
        imagePullPolicy: Always
        ports:
        - name: spr-boot-port
          containerPort: 8080

---
# DEPLOYMENT: client-ribbon-balancer
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ribbon-client-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: ribbon-client
    spec:
      containers:
      - name: ribbon-client
        image: noelalonso1/ribbon-client
        imagePullPolicy: Always
        ports:
        - name: spr-boot-port-2
          containerPort: 8090

---
# DEPLOYMENT: Hystrix - console
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hystrix-console-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hystrix-console
    spec:
      containers:
      - name: hystrix-console
        image: noelalonso1/hystrix-console
        imagePullPolicy: Always
        ports:
        - name: hyst-cons-port
          containerPort: 8100

---
# DEPLOYMENT: Hystrix - console
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: turbine-stream-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: turbine-stream
    spec:
      containers:
      - name: turbine-stream
        image: noelalonso1/turbine-stream
        imagePullPolicy: Always
        ports:
        - name: turbine-port
          containerPort: 8989

---
# INGRESS !! 
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-rules
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: hello.noelalonso.tk
    http:
      paths:
      - path: /
        backend:
          serviceName: helloworld-service
          servicePort: 80
  - host: www.noelalonso.tk
    http:
      paths:
      - path: /
        backend:
          serviceName: helloworld-service
          servicePort: 80
  - host: hystrix-console.noelalonso.tk
    http:
      paths:
      - path: /
        backend:
          serviceName: hystrix-console-service
          servicePort: 8100
  - host: turbine-stream.noelalonso.tk
    http:
      paths:
      - path: /
        backend:
          serviceName: turbine-stream-service
          servicePort: 8989
  - host: eureka.noelalonso.tk
    http:
      paths:
      - path: /
        backend:
          serviceName: eureka-server-service
          servicePort: 8761
  - host: client.noelalonso.tk
    http:
      paths:
      - path: /
        backend:
          serviceName: ribbon-client-service
          servicePort: 8090
  - host: rabbit.noelalonso.tk
    http:
      paths:
      - path: /
        backend:
          serviceName: rabbit-mq-service
          servicePort: 15672
  - http:
      paths:
      - path: /
        backend:
          serviceName: helloworld-service
          servicePort: 80
      - path: /hystrix-console
        backend:
          serviceName: hystrix-console-service
          servicePort: 8100
      - path: /turbine-stream
        backend:
          serviceName: turbine-stream-service
          servicePort: 8989
      - path: /eureka
        backend:
          serviceName: eureka-server-service
          servicePort: 8761
      - path: /client
        backend:
          serviceName: ribbon-client-service
          servicePort: 8090
      - path: /rabbit
        backend:
          serviceName: rabbit-mq-service
          servicePort: 15672
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-rules-2
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /hystrix
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /hystrix
        backend:
          serviceName: hystrix-console-service
          servicePort: 8100
---
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-rules-3
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /webjars
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /webjars
        backend:
          serviceName: hystrix-console-service
          servicePort: 8100

---
# SERVICE: ingress-controller (controller creado con https://raw.githubusercontent.com/kubernetes/ingress-nginx/master/deploy/mandatory.yaml)
#kind: Service
#apiVersion: v1
#metadata:
#  name: ingress-nginx
#  namespace: ingress-nginx
#  labels:
#    app.kubernetes.io/name: ingress-nginx
#    app.kubernetes.io/part-of: ingress-nginx
#spec:
#  externalTrafficPolicy: Local
#  type: NodePort
#  selector:
#    app.kubernetes.io/name: ingress-nginx
#    app.kubernetes.io/part-of: ingress-nginx
#  ports:
#    - name: http
#      port: 80
#      targetPort: http
#    - name: https
#      port: 443
#      targetPort: https
  
---
# SERVICE: eureka-server
apiVersion: v1
kind: Service
metadata:
  name: eureka-server-service
spec:
  ports:
  - port: 8761
    targetPort: eureka-port
    protocol: TCP
  selector:
    app: eureka-server
  type: ClusterIP

---
# SERVICE: ribbon-client
apiVersion: v1
kind: Service
metadata:
  name: ribbon-client-service
spec:
  ports:
  - port: 8090
    targetPort: spr-boot-port-2
    protocol: TCP
  selector:
    app: ribbon-client
  type: ClusterIP

---
# SERVICE: hystrix-console
apiVersion: v1
kind: Service
metadata:
  name: hystrix-console-service
spec:
  ports:
  - port: 8100
    targetPort: hyst-cons-port
    protocol: TCP
  selector:
    app: hystrix-console
  type: ClusterIP

---
# SERVICE: turbine-stream
apiVersion: v1
kind: Service
metadata:
  name: turbine-stream-service
spec:
  ports:
  - port: 8989
    targetPort: turbine-port
    protocol: TCP
  selector:
    app: turbine-stream
  type: ClusterIP

---
# SERVICE: rabbit-mq
apiVersion: v1
kind: Service
metadata:
  name: rabbit-mq-service
spec:
  ports:
  - port: 5672
    targetPort: 5672
    protocol: TCP
    name: rabbit1
  - port: 15672
    targetPort: 15672
    protocol: TCP
    name: rabbit2
  selector:
    app: rabbit-mq
  type: ClusterIP
