all-together/kubernetes-ingress.yml
# INGRESS !!
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-rules
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: hello.noelalonso.tk
    http:
      paths:
      - path: /
        backend:
          serviceName: helloworld-service
          servicePort: 80
  - host: noelalonso.tk
    http:
      paths:
      - path: /
        backend:
          serviceName: helloworld-service
          servicePort: 80
      - path: /hystrix-console
        backend:
          serviceName: hystrix-console-service
          servicePort: 8100
      - path: /turbine-stream
        backend:
          serviceName: turbine-stream-service
          servicePort: 8989
      - path: /eureka
        backend:
          serviceName: eureka-server-service
          servicePort: 8761
      - path: /client
        backend:
          serviceName: ribbon-client-service
          servicePort: 8090
      - path: /rabbit
        backend:
          serviceName: rabbit-mq-service
          servicePort: 15672
  - host: www.noelalonso.tk
    http:
      paths:
      - path: /
        backend:
          serviceName: helloworld-service
          servicePort: 80
  - host: hystrix-console.noelalonso.tk
    http:
      paths:
      - path: /
        backend:
          serviceName: hystrix-console-service
          servicePort: 8100
  - host: turbine-stream.noelalonso.tk
    http:
      paths:
      - path: /
        backend:
          serviceName: turbine-stream-service
          servicePort: 8989
  - host: eureka.noelalonso.tk
    http:
      paths:
      - path: /
        backend:
          serviceName: eureka-server-service
          servicePort: 8761
  - host: client.noelalonso.tk
    http:
      paths:
      - path: /
        backend:
          serviceName: ribbon-client-service
          servicePort: 8090
  - host: rabbit.noelalonso.tk
    http:
      paths:
      - path: /
        backend:
          serviceName: rabbit-mq-service
          servicePort: 15672
